Bug 20213 - cassert header documentation wrong
Summary: cassert header documentation wrong
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libstdc++ (show other bugs)
Version: 3.3.5
: P2 normal
Target Milestone: 4.1.0
Assignee: Paolo Carlini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-25 19:35 UTC by Frank Hess
Modified: 2005-10-30 22:25 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-10-30 17:01:18


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Hess 2005-02-25 19:35:19 UTC
The cassert header states: 
 
 *  This is the C++ version of the Standard C Library header @c assert.h, 
 *  and its contents are (mostly) the same as that header, but are all 
 *  contained in the namespace @c std. 
 
However, this bug report http://gcc.gnu.org/bugzilla/show_bug.cgi?id=15771 
indicates that the assert macro is (and should be) in the global namespace, 
not in std.
Comment 1 Paolo Carlini 2005-03-02 23:52:05 UTC
I have trouble considering this comment *wrong*: according to 17.4.1.2/4, it's
generally true for all the C++ headers for C library facilities that "... the
declarations and  definitions (except for names which are defined as macros
in C) are within namespace scope of the namespace std.". I'm not sure that we
want to change that general comment, special casing it for <cassert>, <cerrno>,
etc... Maybe mention macros behavior in all of them?
Comment 2 Paolo Carlini 2005-10-30 22:25:24 UTC
Fixed.